--- a/feature-assets/src/main/res/layout/item_day_header.xml
+++ b/feature-assets/src/main/res/layout/item_day_header.xml
@@ -2,16 +2,12 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/itemDayHeader"
+    style="@style/TextAppearance.NovaFoundation.SemiBold.Caps2"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:fontFamily="?attr/fontBold"
-    android:includeFontPadding="false"
-    android:paddingStart="@dimen/x2"
-    android:paddingTop="@dimen/x1"
-    android:paddingEnd="@dimen/x2"
-    android:paddingBottom="@dimen/x1"
-    android:textAllCaps="true"
-    android:textColor="@color/white"
-    android:textSize="@dimen/text_size_b3"
-    tools:background="@color/black"
+    android:layout_marginStart="16dp"
+    android:layout_marginTop="16dp"
+    android:layout_marginEnd="16dp"
+    android:textColor="@color/white_64"
+    android:layout_marginBottom="8dp"
     tools:text="Today" />
