--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -7,7 +7,7 @@
 
     <action
         android:id="@+id/action_open_send"
-        app:destination="@id/chooseRecipientFragment"
+        app:destination="@id/selectSendFragment"
         app:enterAnim="@anim/fragment_open_enter"
         app:exitAnim="@anim/fragment_open_exit"
         app:popEnterAnim="@anim/fragment_close_enter"
@@ -377,29 +377,6 @@
         android:label="RewardDetailFragment"
         tools:layout="@layout/fragment_reward_slash_details" />
 
-    <action
-        android:id="@+id/openSelectAmount"
-        app:destination="@id/chooseAmountFragment"
-        app:enterAnim="@anim/fragment_open_enter"
-        app:exitAnim="@anim/fragment_open_exit"
-        app:popEnterAnim="@anim/fragment_close_enter"
-        app:popExitAnim="@anim/fragment_close_exit" />
-
-    <fragment
-        android:id="@+id/chooseRecipientFragment"
-        android:name="io.novafoundation.nova.feature_assets.presentation.send.recipient.ChooseRecipientFragment"
-        android:label="ChooseRecipientFragment"
-        tools:layout="@layout/fragment_choose_recipient">
-
-        <action
-            android:id="@+id/action_chooseRecipientFragment_to_chooseAmountFragment"
-            app:destination="@id/chooseAmountFragment"
-            app:enterAnim="@anim/fragment_open_enter"
-            app:exitAnim="@anim/fragment_open_exit"
-            app:popEnterAnim="@anim/fragment_close_enter"
-            app:popExitAnim="@anim/fragment_close_exit" />
-    </fragment>
-
     <fragment
         android:id="@+id/receiveFragment"
         android:name="io.novafoundation.nova.feature_assets.presentation.receive.ReceiveFragment"
@@ -407,10 +384,10 @@
         tools:layout="@layout/fragment_receive" />
 
     <fragment
-        android:id="@+id/chooseAmountFragment"
-        android:name="io.novafoundation.nova.feature_assets.presentation.send.amount.ChooseAmountFragment"
+        android:id="@+id/selectSendFragment"
+        android:name="io.novafoundation.nova.feature_assets.presentation.send.amount.SelectSendFragment"
         android:label="ChooseAmountFragment"
-        tools:layout="@layout/fragment_choose_amount">
+        tools:layout="@layout/fragment_select_send">
 
         <action
             android:id="@+id/action_chooseAmountFragment_to_confirmTransferFragment"
