--- a/feature-assets/src/main/res/layout/fragment_extrinsic_details.xml
+++ b/feature-assets/src/main/res/layout/fragment_extrinsic_details.xml
@@ -33,7 +33,7 @@
                 android:layout_width="64dp"
                 android:layout_height="64dp"
                 android:layout_marginTop="16dp"
-                android:background="@drawable/bg_icon_round"
+                android:background="@drawable/bg_icon_round_white"
                 android:padding="11dp"
                 app:tint="@color/white_64" />
 
