--- a/feature-assets/src/main/res/layout/item_transaction.xml
+++ b/feature-assets/src/main/res/layout/item_transaction.xml
@@ -11,7 +11,7 @@
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:layout_marginStart="16dp"
-        android:background="@drawable/bg_icon_round"
+        android:background="@drawable/bg_icon_round_white"
         android:padding="6dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
