--- a/feature-crowdloan-impl/src/main/res/layout/fragment_contribute.xml
+++ b/feature-crowdloan-impl/src/main/res/layout/fragment_contribute.xml
@@ -134,7 +134,7 @@
                 android:layout_height="1dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
-                android:background="@color/dividerGray" />
+                android:background="@color/white_8" />
 
             <io.novafoundation.nova.common.view.GoNextView
                 android:layout_width="match_parent"
