--- a/common/src/main/res/layout/view_toolbar.xml
+++ b/common/src/main/res/layout/view_toolbar.xml
@@ -22,7 +22,7 @@
 
     <TextView
         android:id="@+id/titleTv"
-        style="@style/TextAppearance.NovaFoundation.Header3"
+        style="@style/TextAppearance.NovaFoundation.SemiBold.Body"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
