--- a/feature-assets/src/main/res/layout/fragment_select_send.xml
+++ b/feature-assets/src/main/res/layout/fragment_select_send.xml
@@ -87,9 +87,6 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="24dp"
         android:enabled="false"
-        android:text="@string/common_continue"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:text="@string/common_continue" />
 </LinearLayout>
 
