Redesign start staking

--- a/common/src/main/res/drawable/bg_puller.xml
+++ b/common/src/main/res/drawable/bg_puller.xml
@@ -4,5 +4,5 @@
 
     <corners android:radius="999dp" />
 
-    <solid android:color="@color/white" />
+    <solid android:color="@color/white_32" />
 </shape>
