--- a/feature-staking-impl/src/main/res/layout/fragment_setup_staking.xml
+++ b/feature-staking-impl/src/main/res/layout/fragment_setup_staking.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/setupStakingContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
-    android:id="@+id/setupStakingContainer"
     android:background="@color/black"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <io.novafoundation.nova.common.view.Toolbar
+        android:id="@+id/setupStakingToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/setupStakingToolbar"
+        app:dividerVisible="false"
         app:homeButtonIcon="@drawable/ic_close"
-        app:titleText="@string/staking_stake" />
+        tools:titleText="@string/staking_stake_format" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -22,106 +23,44 @@
         android:layout_weight="1">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <io.novafoundation.nova.common.view.AmountView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
+            <io.novafoundation.nova.feature_wallet_api.presentation.view.amount.ChooseAmountView
                 android:id="@+id/setupStakingAmountField"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="27dp"
-                android:layout_marginEnd="16dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    style="@style/TextAppearance.NovaFoundation.Body1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/network_fee"
-                    android:textColor="@color/gray1" />
-
-                <Space
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
-
-                <ProgressBar
-                    android:layout_width="16dp"
-                    android:indeterminate="true"
-                    android:id="@+id/setupStakingFeeProgress"
-                    android:layout_gravity="center_vertical"
-                    android:indeterminateTint="@color/white"
-                    android:layout_height="16dp" />
-
-                <TextView
-                    android:id="@+id/setupStakingFeeToken"
-                    style="@style/TextAppearance.NovaFoundation.Body1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:visibility="gone"
-                    android:layout_marginEnd="8dp"
-                    tools:text="0.001 KSM"
-                    android:textColor="@color/white" />
-
-
-                <TextView
-                    android:id="@+id/setupStakingFeeFiat"
-                    style="@style/TextAppearance.NovaFoundation.Body1"
-                    android:layout_width="wrap_content"
-                    android:visibility="gone"
-                    android:layout_height="wrap_content"
-                    tools:text="$0.2"
-                    android:textColor="@color/gray2" />
-
-            </LinearLayout>
-
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginEnd="16dp"
-                android:background="@color/gray3" />
-
-            <TextView
-                style="@style/TextAppearance.NovaFoundation.Body1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="25dp"
-                android:text="@string/staking_setup_reward_destination_section_title_v2_2_0"
-                android:textColor="@color/white" />
 
             <io.novafoundation.nova.feature_staking_impl.presentation.view.RewardDestinationChooserView
                 android:id="@+id/setupStakingRewardDestinationChooser"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="16dp" />
 
-            <Space
+            <io.novafoundation.nova.feature_wallet_api.presentation.view.FeeView
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1" />
+                android:layout_height="wrap_content"
+                android:id="@+id/setupStakingFee"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="16dp"
+                app:dividerVisible="false" />
         </LinearLayout>
     </ScrollView>
 
     <io.novafoundation.nova.common.view.PrimaryButton
+        android:id="@+id/setupStakingNext"
         style="@style/Widget.Nova.Button.Primary"
         android:layout_width="match_parent"
-        android:id="@+id/setupStakingNext"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="22dp"
-        android:text="@string/common_continue"
-         />
+        android:text="@string/common_continue" />
 </LinearLayout>
