--- a/feature-staking-impl/src/main/res/layout/fragment_select_reward_destination.xml
+++ b/feature-staking-impl/src/main/res/layout/fragment_select_reward_destination.xml
@@ -12,11 +12,15 @@
         android:layout_width="match_parent"
         android:id="@+id/selectRewardDestinationToolbar"
         android:layout_height="wrap_content"
+        app:dividerVisible="false"
         app:homeButtonIcon="@drawable/ic_close"
         app:titleText="@string/staking_rewards_destination_title_v2_0_0" />
 
     <io.novafoundation.nova.feature_staking_impl.presentation.view.RewardDestinationChooserView
         android:id="@+id/selectRewardDestinationChooser"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -24,6 +28,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        app:dividerVisible="false"
+        android:layout_marginTop="12dp"
         android:id="@+id/selectRewardDestinationFee"
         android:layout_marginEnd="16dp" />
 
