--- a/common/src/main/res/values/colors.xml
+++ b/common/src/main/res/values/colors.xml
@@ -50,6 +50,7 @@
     <color name="account_icon_dark">@color/black</color>
 
     <color name="red">#FF285C</color>
+    <color name="yellow">#FFE711</color>
 
     <color name="bar_bg_64">#A8252528</color>
 
