--- a/feature-staking-impl/src/main/res/layout/item_alert.xml
+++ b/feature-staking-impl/src/main/res/layout/item_alert.xml
@@ -8,37 +8,29 @@
     android:background="@drawable/bg_primary_list_item"
     tools:background="@color/blurColor">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="14dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@drawable/ic_warning_filled" />
 
     <TextView
         android:id="@+id/alertItemTitle"
-        style="@style/TextAppearance.NovaFoundation.Body2"
+        style="@style/TextAppearance.NovaFoundation.Regular.Footnote"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:includeFontPadding="false"
         android:textColor="@color/white"
         app:layout_constraintEnd_toStartOf="@+id/alertItemGoToFlowIcon"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:text="Change your validators." />
 
     <TextView
         android:id="@+id/alertItemMessage"
-        style="@style/TextAppearance.NovaFoundation.Body2"
+        style="@style/TextAppearance.NovaFoundation.Regular.Caption1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="14dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="8dp"
         android:textColor="@color/white_64"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/alertItemTitle"
@@ -52,19 +44,10 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:srcCompat="@drawable/ic_chevron_right"
-        tools:visibility="visible" />
-
-    <View
-        android:id="@+id/alertItemDivider"
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:background="@color/white_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_chevron_right"
+        app:tint="@color/white_48"
+        tools:visibility="visible" />
 </androidx.constraintlayout.widget.ConstraintLayout>
