--- a/feature-staking-impl/src/main/res/layout/fragment_recommended_validators.xml
+++ b/feature-staking-impl/src/main/res/layout/fragment_recommended_validators.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
@@ -11,35 +12,36 @@
         android:id="@+id/recommendedValidatorsToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:dividerVisible="false"
         app:titleText="@string/staking_recommended_section_title" />
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/recommendedValidatorsAccounts"
-            style="@style/TextAppearance.NovaFoundation.CapsTitle2"
+            style="@style/TextAppearance.NovaFoundation.SemiBold.Caps2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
             android:text="@string/profile_accounts_title"
             android:textAllCaps="true"
-            android:textColor="@color/gray1" />
+            android:textColor="@color/white_80" />
 
         <TextView
-            style="@style/TextAppearance.NovaFoundation.CapsTitle2"
+            style="@style/TextAppearance.NovaFoundation.SemiBold.Caps2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_marginStart="16dp"
             android:text="@string/staking_rewards_apy"
             android:textAllCaps="true"
-            android:textColor="@color/gray1" />
+            android:textColor="@color/white_80" />
     </FrameLayout>
 
     <ProgressBar
@@ -51,27 +53,36 @@
         android:indeterminate="true"
         android:indeterminateTint="@color/white" />
 
-    <androidx.recyclerview.widget.RecyclerView xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/recommendedValidatorsList"
+    <FrameLayout
+        android:id="@+id/recommendedValidatorsContent"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="6dp"
-        android:layout_weight="1"
-        android:orientation="vertical"
         android:visibility="gone"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:itemCount="15"
-        tools:listitem="@layout/item_validator" />
+        android:layout_weight="1">
 
-    <io.novafoundation.nova.common.view.PrimaryButton
-        android:id="@+id/recommendedValidatorsNext"
-        style="@style/Widget.Nova.Button.Primary"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="22dp"
-        android:text="@string/common_continue"
-        android:visibility="gone" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recommendedValidatorsList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="6dp"
+            android:orientation="vertical"
+            android:paddingBottom="80dp"
+            android:clipToPadding="false"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:itemCount="15"
+            tools:listitem="@layout/item_validator" />
+
+        <io.novafoundation.nova.common.view.PrimaryButton
+            android:id="@+id/recommendedValidatorsNext"
+            style="@style/Widget.Nova.Button.Primary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_gravity="bottom"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:text="@string/common_continue" />
+
+    </FrameLayout>
 </LinearLayout>
