--- a/common/src/main/res/drawable/primary_chip_background.xml
+++ b/common/src/main/res/drawable/primary_chip_background.xml
@@ -4,15 +4,15 @@
         <shape android:shape="rectangle">
             <solid android:color="?attr/colorAccent" />
 
-            <corners android:radius="999dp" />
+            <corners android:radius="10dp" />
         </shape>
     </item>
 
     <item android:state_enabled="false">
         <shape android:shape="rectangle">
-            <solid android:color="@color/black4" />
+            <solid android:color="@color/disabledColor" />
 
-            <corners android:radius="999dp" />
+            <corners android:radius="10dp" />
         </shape>
     </item>
 </selector>
