--- a/common/src/main/res/drawable/secondary_chip_background.xml
+++ b/common/src/main/res/drawable/secondary_chip_background.xml
@@ -2,17 +2,17 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_enabled="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/black3" />
+            <solid android:color="@color/accentSecondary" />
 
-            <corners android:radius="999dp" />
+            <corners android:radius="10dp" />
         </shape>
     </item>
 
     <item android:state_enabled="false">
         <shape android:shape="rectangle">
-            <solid android:color="@color/black4" />
+            <solid android:color="@color/disabledColor" />
 
-            <corners android:radius="999dp" />
+            <corners android:radius="10dp" />
         </shape>
     </item>
 </selector>
