--- a/feature-staking-impl/src/main/res/layout/fragment_select_custom_validators.xml
+++ b/feature-staking-impl/src/main/res/layout/fragment_select_custom_validators.xml
@@ -2,33 +2,34 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/selectCustomValidatorsContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/selectCustomValidatorsContainer"
     android:orientation="vertical"
     tools:background="@color/black">
 
     <io.novafoundation.nova.common.view.Toolbar
         android:id="@+id/selectCustomValidatorsToolbar"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        app:dividerVisible="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:titleText="@string/staking_custom_validators_list_title" />
 
     <HorizontalScrollView
-        android:layout_width="match_parent"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:paddingStart="16dp"
         android:id="@+id/selectCustomValidatorsChips"
-        android:paddingEnd="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
         android:clipToPadding="false"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         android:scrollbars="none"
-        app:layout_constraintTop_toBottomOf="@id/selectCustomValidatorsToolbar"
-        android:layout_height="wrap_content">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/selectCustomValidatorsToolbar">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -37,48 +38,27 @@
 
             <TextView
                 android:id="@+id/selectCustomValidatorsFillWithRecommended"
-                style="@style/TextAppearance.NovaFoundation.CapsTitle2"
+                style="@style/Widget.Nova.Action.Primary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="12dp"
-                android:background="@drawable/primary_chip_background"
-                android:includeFontPadding="false"
-                android:paddingStart="12dp"
-                android:paddingTop="6dp"
-                android:paddingEnd="12dp"
-                android:paddingBottom="6dp"
-                android:text="@string/staking_custom_fill_button_title"
-                android:textColor="@color/button_text_colors" />
+                android:text="@string/staking_custom_fill_button_title" />
 
             <TextView
                 android:id="@+id/selectCustomValidatorsClearFilters"
-                style="@style/TextAppearance.NovaFoundation.CapsTitle2"
+                style="@style/Widget.Nova.Action.Secondary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="12dp"
-                android:background="@drawable/secondary_chip_background"
-                android:includeFontPadding="false"
-                android:paddingStart="12dp"
-                android:paddingTop="6dp"
-                android:paddingEnd="12dp"
-                android:paddingBottom="6dp"
-                android:text="@string/staking_custom_clear_button_title"
-                android:textColor="@color/button_text_colors" />
+                android:text="@string/staking_custom_clear_button_title" />
 
             <TextView
                 android:id="@+id/selectCustomValidatorsDeselectAll"
-                style="@style/TextAppearance.NovaFoundation.CapsTitle2"
+                style="@style/Widget.Nova.Action.Secondary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="12dp"
-                android:background="@drawable/secondary_chip_background"
-                android:includeFontPadding="false"
-                android:paddingStart="12dp"
-                android:paddingTop="6dp"
-                android:paddingEnd="12dp"
-                android:paddingBottom="6dp"
-                android:text="@string/staking_custom_deselect_button_title"
-                android:textColor="@color/button_text_colors" />
+                android:text="@string/staking_custom_deselect_button_title" />
         </LinearLayout>
     </HorizontalScrollView>
 
@@ -87,7 +67,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -96,23 +76,23 @@
 
         <TextView
             android:id="@+id/selectCustomValidatorsCount"
-            style="@style/TextAppearance.NovaFoundation.CapsTitle2"
+            style="@style/TextAppearance.NovaFoundation.SemiBold.Caps2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
             android:textAllCaps="true"
-            android:textColor="@color/gray1"
+            android:textColor="@color/white_80"
             tools:text="validators: 200 of 940" />
 
         <TextView
             android:id="@+id/selectCustomValidatorsSorting"
-            style="@style/TextAppearance.NovaFoundation.CapsTitle2"
+            style="@style/TextAppearance.NovaFoundation.SemiBold.Caps2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_marginStart="16dp"
             android:textAllCaps="true"
-            android:textColor="@color/gray1"
+            android:textColor="@color/white_80"
             tools:text="@string/staking_rewards_apy" />
     </FrameLayout>
 
@@ -120,7 +100,7 @@
         android:id="@+id/selectCustomValidatorsList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="6dp"
+        android:layout_marginTop="8dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -129,13 +109,13 @@
         tools:listitem="@layout/item_validator" />
 
     <io.novafoundation.nova.common.view.PrimaryButton
+        android:id="@+id/selectCustomValidatorsNext"
         style="@style/Widget.Nova.Button.Primary"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="24dp"
-        android:id="@+id/selectCustomValidatorsNext"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
